--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
 <!-- title -->
-<title>{{ page.title }} &middot; {{ site.data.brume.name }}</title>
+<title>{{ page.title }}</title>
 
 <!-- icons -->
 <link rel="shortcut icon" href="{{site.url}}/public/images/favicon.ico" />
@@ -19,7 +19,7 @@
 <link rel="stylesheet" href="{{site.url}}/public/css/responsive.gs.12col.css">
 <link rel="stylesheet" href="{{site.url}}/public/css/animate.min.css">
 <link rel="stylesheet" href="{{site.url}}/public/css/main.css">
-
+<link rel="stylesheet" href="{{site.url}}/public/css/bootstrap.gs.12row.css">
 <!-- Google fonts -->
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic&subset=latin-ext">
 
