--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,12 +1,12 @@
 // Variables
-$site-background-color: #f5f5f5;
-$contrast-color: #333;
+$site-background-color: #f5f5f5;  //白色
+$contrast-color: #333;    //黑色
 
-$azure-accent-color: #007fff;
-$ruby-accent-color: #e0115f;
-$amber-accent-color: #ff7e00;
-$avocado-accent-color: #568203;
-
+$azure-accent-color: #007fff; //蓝色
+$ruby-accent-color: #e0115f;  //粉红
+$amber-accent-color: #ff7e00; //橙色
+$avocado-accent-color: #568203; //绿色
+$gray-accent-color: #696969; //灰色
 /* ====== General Styles
 ============================================================================= */
 * {
@@ -62,7 +62,7 @@ a {
 
   &:hover,
   &:active {
-    color: darken($azure-accent-color, 15%);
+    color: darken($gray-accent-color, 15%);
   }
 }
 
@@ -228,6 +228,13 @@ p code {
   font-size: 8rem;
 }
 
+.signature {
+  text-align: center;
+  font-size:1rem;
+  font-family: Consolas, "Liberation Mono", Courier, monospace;
+  font-color: $azure-accent-color;
+ 
+}
 /* ====== Footer
 ============================================================================= */
 .pagination {
