--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,12 +1,12 @@
 // Variables
-$site-background-color: #f5f5f5;  //╟ви╚
-$contrast-color: #333;    //╨зи╚
+$site-background-color: #f5f5f5;  //Г≥╫Х┴╡
+$contrast-color: #333;    //И╩▒Х┴╡
 
-$azure-accent-color: #007fff; //ю╤и╚
-$ruby-accent-color: #e0115f;  //╥ш╨Л
-$amber-accent-color: #ff7e00; //Ёхи╚
-$avocado-accent-color: #568203; //бли╚
-$gray-accent-color: #696969; //╩ри╚
+$azure-accent-color: #007fff; //Х⌠²Х┴╡
+$ruby-accent-color: #e0115f;  //Г╡┴Г╨╒
+$amber-accent-color: #ff7e00; //Ф╘≥Х┴╡
+$avocado-accent-color: #568203; //Г╩©Х┴╡
+$gray-accent-color: #696969; //Г│╟Х┴╡
 /* ====== General Styles
 ============================================================================= */
 * {
