--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -16,6 +16,11 @@ $gray-accent-color: #696969; //灰色
   box-sizing: border-box;
 }
 
+html {
+	min-height: 95%;
+	height:100%;
+}
+
 body {
   background-color: $site-background-color;
   border-top: 5px solid $contrast-color;
@@ -23,6 +28,8 @@ body {
   color: $contrast-color;
   font-weight: 400;
   line-height: 1.5;
+  height:100%;
+  min-height: 100%;
 
   -webkit-font-smoothing: antialiased;
 }
@@ -57,7 +64,7 @@ img {
 }
 
 a {
-  color: $azure-accent-color;
+  color: $gray-accent-color;
   text-decoration: none;
 
   &:hover,
@@ -70,6 +77,7 @@ code {
   font-family: Consolas, "Liberation Mono", Courier, monospace;
   font-size: .8rem;
 }
+
 
 hr {
   border : 0;
@@ -92,6 +100,8 @@ p code {
 .container {
   max-width: 750px;
   padding: 0 20px;
+  height:95%;
+  min-height:95%;
 }
 
 .right {
@@ -233,6 +243,13 @@ p code {
   font-size:1rem;
   font-family: Consolas, "Liberation Mono", Courier, monospace;
   font-color: $azure-accent-color;
+ 
+}
+.about {
+  text-align: center;
+  font-size:1rem;
+  font-family: Consolas, "Liberation Mono", Courier, monospace;
+  margin-top:80px;
  
 }
 /* ====== Footer
