--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -17,8 +17,7 @@ $gray-accent-color: #696969; //灰色
 }
 
 html {
-	min-height: 95%;
-	height:100%;
+	height: 100%;
 }
 
 body {
@@ -28,8 +27,7 @@ body {
   color: $contrast-color;
   font-weight: 400;
   line-height: 1.5;
-  height:100%;
-  min-height: 100%;
+  height: 95%;
 
   -webkit-font-smoothing: antialiased;
 }
@@ -100,8 +98,7 @@ p code {
 .container {
   max-width: 750px;
   padding: 0 20px;
-  height:95%;
-  min-height:95%;
+  min-height:95%
 }
 
 .right {
@@ -343,4 +340,7 @@ footer {
       }
     }
   }
+}
+.archive-entry {
+    margin-bottom: 7px;
 }
