--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<article class="single-post row gutters">
-  <time class="published" datetime="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date_to_long_string }}</time>
+<article class="single-post row">
   <h2>{{ page.title }}</h2>
-
+  <div class="post-content">
   {{ content }}
+  </div>
 </article>
