--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,32 +1,13 @@
 <!-- meta information -->
 <meta charset="utf-8">
-<meta name="description" {% if page.title == "Home" %}
-      content="{{ site.data.brume.description }}" {% else %}
-      content="{{ page.content | strip_html | strip_newlines | truncate: 120 }}" {% endif %}>
-<meta name="author" content="{{ site.data.brume.author }}">
-
 <!-- Enable responsiveness on mobile devices-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-
 <!-- title -->
 <title>{{ page.title }}</title>
-
-<!-- icons -->
-<link rel="shortcut icon" href="{{site.url}}/public/images/favicon.ico" />
-
-<!-- stylesheets -->
-<link rel="stylesheet" href="{{site.url}}/public/css/syntax.css">
-<link rel="stylesheet" href="{{site.url}}/public/css/responsive.gs.12col.css">
-<link rel="stylesheet" href="{{site.url}}/public/css/animate.min.css">
-<link rel="stylesheet" href="{{site.url}}/public/css/main.css">
-<link rel="stylesheet" href="{{site.url}}/public/css/bootstrap.gs.12row.css">
-<!-- Google fonts -->
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic&subset=latin-ext">
-
-{% if site.paginate %}
-<!-- font Awesome -->
-<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-{% endif %}
-
-<!-- feed links -->
-<link rel="alternate" href="{{ site.url }}/feed.xml" type="application/rss+xml" title="{{ site.name }}">
+<link rel="stylesheet" href="{{ site.url }}/public/css/common.min.css"/>
+<link rel="stylesheet" href="{{ site.url }}/public/css/base.min.css"/>
+<link rel="stylesheet" href="{{ site.url }}/public/css/default.min.css">
+<link rel="stylesheet" href="{{ site.url }}/public/css/animate.min.css">
+<script src="{{ site.url }}/public/js/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+<link rel="shortcut icon" href="{{ site.url }}/public/images/favicon.ico">
