--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,5 @@
-<nav class="col span_10">
-  {% for link in site.data.links %}
-  <a href="{{ link.url }}" title="{{ link.title }}"
-     {% if page.title == link.title %}class="current-page"{% endif %}>{{ link.title }}</a>
-  {% endfor %}
-</nav>
+<ul class="offset2 span10">
+{% for link in site.data.links %}
+	<li onclick="javascript:document.location.href='{{ site.url }}{{ link.url }}'" {% if page.title == link.title %}class="current-page"{% endif %}>{{ link.title }}</li>
+{% endfor %}
+</ul>
