--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,31 +1,13 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    {% include head.html %}
-  </head>
-  <body>
-    <div class="container azure">
-      <header class="top row gutters{% if page.title == "Home" %} fadeInLeft animated{% endif %}">
-        <div class="col span_2" id="logo-container">
-          <a href="/" id="actual-logo" title="{{ site.data.brume.name }}" style="background-image: url({{site.url}}/public/images/logo.png);"></a>
-        </div>
-        {% include navigation.html %}
-      </header>
-	  
-      {{ content }}
-    </div>
-      <footer>
-        <p>
-          This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/deed.en_US">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
-        </p>
-      </footer>
-    <!-- scripts -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="/public/js/cyningsun.js"></script>
-    <script>
-      $(document).ready(function(){
-        category.init();
-      });
-    </script>
-  </body>
-</html>
+---
+layout: default
+---
+
+{{ content }}
+<!-- scripts -->
+<script src="/public/js/jquery.min.js"></script>
+<script src="/public/js/cyningsun.js"></script>
+<script>
+  $(document).ready(function(){
+	category.init();
+  });
+</script>
