--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,31 +1,21 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-  <head>
-    {% include head.html %}
-  </head>
-  <body>
-    <div class="container azure">
-      <header class="top row gutters{% if page.title == "Home" %} fadeInLeft animated{% endif %}">
-        <div class="col span_2" id="logo-container">
-          <a href="/" id="actual-logo" title="{{ site.data.brume.name }}" style="background-image: url({{site.url}}/public/images/logo.png);"></a>
-        </div>
-        {% include navigation.html %}
-      </header>
-	  
-      {{ content }}
-    </div>
-      <footer>
-        <p>
-          This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/deed.en_US">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
-        </p>
-      </footer>
-    <!-- scripts -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="/public/js/jquery.fitvids.min.js"></script>
-    <script>
-      $(document).ready(function(){
-        $("article").fitVids();
-      });
-    </script>
-  </body>
+	<head>
+		{% include head.html %}
+	</head>
+	<body >
+		<div class="container">
+			<header class="top row  fadeInLeft animated">
+				<div class="span2 fl">
+				  <a href="/" class="logo" title="{{ site.data.brume.name }}" style="background-image: url({{site.url}}/public/images/logo.png);"></a>
+				</div>
+				{% include navigation.html %}
+			</header>
+			{{ content }}
+		</div>
+		<footer>
+			<p>Copyright ©2014 cyningsun</p>
+			<p><a href="http://cyningsun.github.io">GitHub Pages</a></p>
+		</footer>
+	</body>
 </html>
