--- a/public/css/common.less
+++ b/public/css/common.less
@@ -231,8 +231,8 @@ body {
   float:left;
   
   li {
-	
 	strong{
+	  cursor: pointer;
 	  font: 16px Georgia, "Times New Roman", Times, sans-serif;
 	  display: block;
 	  line-height: 1.5;
@@ -254,6 +254,9 @@ body {
   }
   .active{
     display: block;
+  }
+  li {
+    cursor: pointer;
   }
   a {
 	  display: block;
