--- a/public/css/common.css
+++ b/public/css/common.css
@@ -242,9 +242,13 @@ body {
 }
 /* ==================== Tag Page ======================== */
 .tags a {
-  font-family: 14px "Galdeano", "Hiragino Sans GB", "Microsoft YaHei", Trebuchet, "Trebuchet MS", Tahoma, "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif;
-  text-decoration: none;
+  font: 14px Monaco, "Courier New", monospace;
   color: #ff7e00;
+  padding: 4px 6px;
+  margin: 2px;
+  border-radius: 3px;
+  text-decoration: none;
+  border: 1px dashed #696969;
 }
 .tag-posts {
   font: 13.34px helvetica, arial, clean, sans-serif;
@@ -295,6 +299,10 @@ body {
   display: block;
   width: 90%;
   margin: 0 auto;
+}
+/* ===================== Footer ========================= */
+.container .ds-powered-by {
+  display: none;
 }
 /* ===================== Footer ========================= */
 footer,
