--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article class="single-post row">
-  <h2>{{ page.title }}</h2>
+  <h2 class="fb">{{ page.title }}</h2>
   <div class="post-content">
   {{ content }}
   </div>
