--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,28 +1,49 @@
-﻿body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td {
+﻿html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,strike,strong,tt,var,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td {
 	margin:0;
 	padding:0;
+	border:0;
+	outline:0;
+	font-weight:inherit;
+	font-style:inherit;
+	font-size:100%;
+	font-family:inherit;
+	vertical-align:baseline;
+}
+:focus {
+	outline:0;
+}
+a,a:link,a:visited,a:hover,a:active {
+	text-decoration:none
 }
 table {
-	border-collapse:collapse;
+	border-collapse:separate;
 	border-spacing:0;
 }
-fieldset,img {
-	border:0;
-}
-address,caption,cite,code,dfn,em,strong,th,var {
-	font-style:normal;
+th,td {
+	text-align:left;
 	font-weight:normal;
+}
+img,iframe {
+	border:none;
+	text-decoration:none;
 }
 ol,ul {
 	list-style:none;
 }
-caption,th {
-	text-align:left;
+input,textarea,select,button {
+	font-size:100%;
+	font-family:inherit;
 }
-q:before,q:after {
-	content:'';
+select {
+	margin:inherit;
 }
-abbr,acronym { border:0;
+hr {
+	margin:0;
+	padding:0;
+	border:0;
+	color:#000;
+	background-color:#000;
+	height:1px
 }
 
 .fb{font-weight:bold}
@@ -31,6 +52,7 @@ abbr,acronym { border:0;
 .lh150{line-height:150%;}
 .lh180{line-height:180%;}
 .lh200{line-height:200%;}
+.lhn{line-height:125%;}
 .unl{text-decoration:underlline;}
 .no_unl{text-decoration:none;}
 
@@ -52,7 +74,6 @@ abbr,acronym { border:0;
 .zoom{zoom:1;}
 .hidden{visiility:hidden;}
 .none{display:none;}
-
 
 .span12 {
   width: 100%;
