--- a/public/css/common.less
+++ b/public/css/common.less
@@ -241,9 +241,13 @@ body {
    background:-o-linear-gradient(left,@gray-accent-color,@site-background-color); /*Opera11*/
    font-size: 20px;
 }
-/* ===================== Footer ========================= */
+/* ===================== other component ========================= */
 .container .ds-powered-by {
 	display: none;
+}
+img{ 
+	max-width:700px;
+	height:auto;
 }
 /* ===================== Footer ========================= */
 
