--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 	<head>
 		{% include head.html %}
 	</head>
-	<body >
+	<body class="bodyer">
 		<div class="container">
 			<header class="top row  fadeInLeft animated">
 				<div class="span2 fl">
