--- a/public/css/common.less
+++ b/public/css/common.less
@@ -10,7 +10,7 @@
 html{
   height:100%;
 }
-body {
+.bodyer {
   background-color: @site-background-color;
   border-top: 5px solid @contrast-color;
   color: @contrast-color;
