--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="{{ site.url }}/public/css/base.min.css"/>
 <link rel="stylesheet" href="{{ site.url }}/public/css/default.min.css">
 <link rel="stylesheet" href="{{ site.url }}/public/css/animate.min.css">
+<link rel="stylesheet" href="{{ site.url }}/public/css/monokai_sublime.min.css">
 <script src="{{ site.url }}/public/js/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <link rel="shortcut icon" href="{{ site.url }}/public/images/favicon.ico">
