--- a/public/css/common.css
+++ b/public/css/common.css
@@ -235,3 +235,16 @@ footer a {
   background-color: #333333;
   color: #f5f5f5;
 }
+/*========================= code ==============================*/
+pre {
+  white-space: pre-wrap;
+  /* css3.0 */
+  white-space: -moz-pre-wrap;
+  /* Firefox */
+  white-space: -pre-wrap;
+  /* Opera 4-6 */
+  white-space: -o-pre-wrap;
+  /* Opera 7 */
+  word-wrap: break-word;
+  /* Internet Explorer 5.5+ */
+}
