--- a/public/css/common.less
+++ b/public/css/common.less
@@ -263,3 +263,11 @@ footer, footer a {
   color: @site-background-color;
 }
 
+/*========================= code ==============================*/
+pre{
+  white-space:pre-wrap; /* css3.0 */
+  white-space:-moz-pre-wrap; /* Firefox */
+  white-space:-pre-wrap; /* Opera 4-6 */
+  white-space:-o-pre-wrap; /* Opera 7 */
+  word-wrap:break-word; /* Internet Explorer 5.5+ */
+}
