--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,11 +4,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 <!-- title -->
 <title>{{ page.title }}</title>
-<link rel="stylesheet" href="{{ site.url }}/public/css/common.min.css"/>
 <link rel="stylesheet" href="{{ site.url }}/public/css/base.min.css"/>
 <link rel="stylesheet" href="{{ site.url }}/public/css/default.min.css">
-<link rel="stylesheet" href="{{ site.url }}/public/css/animate.min.css">
 <link rel="stylesheet" href="{{ site.url }}/public/css/monokai_sublime.min.css">
+<link rel="stylesheet" href="{{ site.url }}/public/css/common.min.css"/>
 <script src="{{ site.url }}/public/js/highlight.min.js"></script>
+<script src="{{ site.url }}/public/js/jquery.min.js"></script>
+<script src="{{ site.url }}/public/js/lightbox.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <link rel="shortcut icon" href="{{ site.url }}/public/images/favicon.ico">
