--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,24 +1,40 @@
----
-layout: default
----
-
-<article class="single-post row">
-  <h2>{{ page.title }}</h2>
-  <div class="post-content">
-  {{ content }}
-  </div>
-</article>
-<!-- Duoshuo Comment BEGIN -->
-<div class="ds-thread"></div>
-<script type="text/javascript">
-var duoshuoQuery = {short_name:"cyningsun"};
-	(function() {
-		var ds = document.createElement('script');
-		ds.type = 'text/javascript';ds.async = true;
-		ds.src = 'http://static.duoshuo.com/embed.js';
-		ds.charset = 'UTF-8';
-		(document.getElementsByTagName('head')[0] 
-		|| document.getElementsByTagName('body')[0]).appendChild(ds);
-	})();
-	</script>
-<!-- Duoshuo Comment END -->
+<!DOCTYPE html>
+<html>
+	<head>
+		{% include head.html %}
+	</head>
+	<body class="bodyer">
+		<div class="container">
+			<header class="top row">
+				<div class="span2 fl">
+				  <a href="/" class="logo" title="{{ site.data.brume.name }}" style="background-image: url({{site.url}}/public/images/logo.png);"></a>
+				</div>
+				{% include navigation.html %}
+			</header>
+			<article class="single-post row">
+			  <h2>{{ page.title }}</h2>
+			  <div class="post-content">
+			  {{ content }}
+			  </div>
+			</article>
+			<!-- Duoshuo Comment BEGIN -->
+			<div class="ds-thread"></div>
+			<script type="text/javascript">
+			var duoshuoQuery = {short_name:"cyningsun"};
+				(function() {
+					var ds = document.createElement('script');
+					ds.type = 'text/javascript';ds.async = true;
+					ds.src = 'http://static.duoshuo.com/embed.js';
+					ds.charset = 'UTF-8';
+					(document.getElementsByTagName('head')[0] 
+					|| document.getElementsByTagName('body')[0]).appendChild(ds);
+				})();
+				</script>
+			<!-- Duoshuo Comment END -->
+		</div>
+		<footer>
+			<p>Copyright ?2014 cyningsun</p>
+			<p><a href="http://cyningsun.github.io">GitHub Pages</a></p>
+		</footer>
+	</body>
+</html>
