--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		{% include head.html %}
@@ -33,7 +33,7 @@
 			<!-- Duoshuo Comment END -->
 		</div>
 		<footer>
-			<p>Copyright ?2014 cyningsun</p>
+			<p>Copyright ©2014 cyningsun</p>
 			<p><a href="http://cyningsun.github.io">GitHub Pages</a></p>
 		</footer>
 	</body>
