--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		{% include head.html %}
-		<link rel="stylesheet" href="http://sindresorhus.com/github-markdown-css/github-markdown.css">
+		<link rel="stylesheet" href="{{ site.url }}/public/css/github-markdown.min.css">
 		<style>
 			.markdown-body {
 				min-width: 200px;
