--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@
             <script>
             var gitment = new Gitment({
               owner: 'cyningsun',
-              repo: 'cyningsun.github.io',
+              repo: 'blog_comment',
               oauth: {
                 client_id: '40f315f8e57ef8d9e004',
                 client_secret: 'ff1b1611ba32d4577562d70288aeb6ec69f194da',
