--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,6 +32,7 @@
             <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
             <script>
             var gitment = new Gitment({
+              id: '{{ page.title }}'
               owner: 'cyningsun',
               repo: 'blog_comment',
               oauth: {
