--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@
 			<!-- Comment BEGIN -->
             <div id="container"></div>
             <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-            <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+            <script src="https://www.wenjunjiang.win/js/gitment.js"></script>
             <script>
             var gitment = new Gitment({
               id: '{{ page.date }}',
