--- a/public/css/common.less
+++ b/public/css/common.less
@@ -392,6 +392,9 @@ html{
 .aboutme-embed#aboutme-cyningsun .aboutme-apps a.app-gmail {
 	background-image:url(/public/images/gmail@32x32.png);
 }
+.aboutme-embed#aboutme-cyningsun .aboutme-apps a.app-douban {
+	background-image:url(/public/images/douban@32x32.jpg);
+}
 /* styles for horizontal layout */.aboutme-layout-horizontal#aboutme-cyningsun .aboutme-content {
 	display:table;
 	width:100%;
