--- a/public/css/common.css
+++ b/public/css/common.css
@@ -270,7 +270,8 @@ html {
   line-height: inherit;
   vertical-align: baseline;
   text-shadow: none;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 .aboutme-default#aboutme-cyningsun span,
 .aboutme-default#aboutme-cyningsun a,
@@ -289,7 +290,8 @@ html {
   line-height: inherit;
   vertical-align: baseline;
   text-shadow: none;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 .aboutme-default#aboutme-cyningsun b,
 .aboutme-default#aboutme-cyningsun strong {
@@ -306,7 +308,8 @@ html {
   line-height: inherit;
   vertical-align: baseline;
   text-shadow: none;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 .aboutme-default#aboutme-cyningsun em,
 .aboutme-default#aboutme-cyningsun i {
@@ -323,7 +326,8 @@ html {
   line-height: inherit;
   vertical-align: baseline;
   text-shadow: none;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 /* base styles for aboutme-embed */
 .aboutme-embed#aboutme-cyningsun {
@@ -333,7 +337,6 @@ html {
   display: block;
   border: 0;
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
   margin-bottom: 8px;
@@ -374,6 +377,9 @@ html {
 .aboutme-embed#aboutme-cyningsun .aboutme-apps a.app-gmail {
   background-image: url(/public/images/gmail@32x32.png);
 }
+.aboutme-embed#aboutme-cyningsun .aboutme-apps a.app-douban {
+  background-image: url(/public/images/douban@32x32.jpg);
+}
 /* styles for horizontal layout */
 .aboutme-layout-horizontal#aboutme-cyningsun .aboutme-content {
   display: table;
@@ -404,7 +410,8 @@ html {
   padding: 10px;
   border: 1px solid #eee;
   border-color: rgba(0, 0, 0, 0.2);
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
   border-radius: 2px;
   margin: 10px 0;
 }
@@ -514,13 +521,11 @@ pre {
   0% {
     opacity: 0;
     -webkit-transform: translateY(-20px);
-    -ms-transform: translateY(-20px);
     transform: translateY(-20px);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateY(0);
-    -ms-transform: translateY(0);
     transform: translateY(0);
   }
 }
@@ -544,13 +549,11 @@ pre {
   0% {
     opacity: 0;
     -webkit-transform: translateX(-20px);
-    -ms-transform: translateX(-20px);
     transform: translateX(-20px);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
     transform: translateX(0);
   }
 }
@@ -582,10 +585,6 @@ pre {
   display: block;
   height: auto;
   max-width: inherit;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
   border-radius: 3px;
 }
 .lb-outerContainer {
@@ -595,10 +594,6 @@ pre {
   width: 250px;
   height: 250px;
   margin: 0 auto;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
   border-radius: 4px;
 }
 .lb-outerContainer:after {
