--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,3 +8,12 @@
 <link rel="stylesheet" href="{{ site.url }}/public/css/default.min.css">
 <link rel="stylesheet" href="{{ site.url }}/public/css/common.min.css"/>
 <link rel="shortcut icon" href="{{ site.url }}/public/images/favicon.ico">
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?fa3bd0c6fdd35517e9424d165f57ac4e";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+</script>    
