--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,6 +46,8 @@
 		</div>
 		<footer>
 			<p>Copyright ©2018 cyningsun</p>
+			<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+			<span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次</span>
 			<p><a href="http://cyningsun.github.io">GitHub Pages</a></p>
 		</footer>
 	</body>
